# clib_dll_cmake_template

./: .gitignore  README.md
mylib/: CMakeLists.txt
mylib/bindings/csharp/: Demo.csproj  Program.cs
mylib/bindings/python/: smoke_test.py
mylib/include/: mylib.h
mylib/scripts/: build_dist.bat  build_dist.sh  clean.bat  clean.sh  run_csharp_smoke_test.bat  run_csharp_smoke_test.sh  run_python_smoke_test.bat  run_python_smoke_test.sh
mylib/src/: mylib.c
